--- a/teacher/index.html
+++ b/teacher/index.html
@@ -6,6 +6,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
+    /* --- Giữ nguyên style của bạn ở trên --- */
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
@@ -27,10 +28,7 @@
       font-size: 16px;
       transition: background 0.3s;
     }
-    #questionList button.active {
-      background-color: #e74c3c;
-    }
-    #questionList button.selected {
+    #questionList button.active, #questionList button.selected {
       background-color: #e74c3c;
     }
     #mainArea {
@@ -38,7 +36,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      position: relative; /* thêm dòng này để reset button dễ căn */
+      position: relative;
     }
     #controlPanel {
       margin-bottom: 20px;
@@ -73,12 +71,18 @@
       max-width: 90%;
       border: 2px solid #ccc;
       border-radius: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       display: block;
+    }
+    #questionVideo {
+      width: 500px;
+      max-width: 90%;
+      margin-bottom: 20px;
+      border-radius: 10px;
     }
     #resultArea {
       width: 100%;
-      padding-bottom: 50px; /* chừa khoảng trống dưới để không đè lên nút reset */
+      padding-bottom: 50px;
     }
     table {
       width: 100%;
@@ -115,8 +119,26 @@
     #resetButtonContainer button:hover {
       background-color: #c0392b;
     }
+    #teamScores {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 10px;
+      gap: 0;
+    }
+    .teamBox {
+      width: 3cm;
+      padding: 10px;
+      background-color: #f1f1f1;
+      border-radius: 8px;
+      font-size: 14px;
+      text-align: center;
+      font-weight: bold;
+    }
   </style>
 </head>
+
 <body>
 
 <div id="questionList">
@@ -130,9 +152,16 @@
     <button onclick="openExplain(3)">📖 Giải thích 3</button>
     <button onclick="openExplain(4)">📖 Giải thích 4</button>
   </div>
+
   <div id="currentQuestionInfo">
     <div id="countdown">⏱️ Còn lại: —</div>
     <img id="questionImage" src="" alt="Hình câu hỏi">
+
+    <!-- Thêm thẻ VIDEO ở đây -->
+    <video id="questionVideo" controls autoplay muted playsinline style="display:none;">
+      <source id="videoSource" src="" type="video/mp4">
+      Trình duyệt của bạn không hỗ trợ video.
+    </video>
   </div>
 
   <div id="resultArea">
@@ -147,6 +176,11 @@
       </thead>
       <tbody id="answerList"></tbody>
     </table>
+  </div>
+
+  <div id="teamScores">
+    <div class="teamBox" id="team1">Đội 1: Điểm 0</div>
+    <div class="teamBox" id="team2">Đội 2: Điểm 0</div>
   </div>
 
   <div id="resetButtonContainer">
@@ -169,17 +203,21 @@
 
   const questionListEl = document.getElementById("questionList");
   const questionImage = document.getElementById("questionImage");
+  const questionVideo = document.getElementById("questionVideo");
+  const videoSource = document.getElementById("videoSource");
   const countdownEl = document.getElementById("countdown");
   const answerListEl = document.getElementById("answerList");
+  const team1El = document.getElementById("team1");
+  const team2El = document.getElementById("team2");
+
   let countdownInt = null;
   let currentQuestion = null;
-
   const correctAnswers = {
     cau1: "B", cau2: "C", cau3: "C", cau4: "D", cau5: "B",
     cau6: "D", cau7: "A", cau8: "D", cau9: "A", cau10: "D"
   };
-
   let studentAnswers = {};
+  let teamScores = { team1: 0, team2: 0 };
 
   for (let i = 1; i <= 10; i++) {
     const btn = document.createElement("button");
@@ -192,16 +230,20 @@
     clearInterval(countdownInt);
     currentQuestion = qn;
     const padded = String(qn).padStart(2, '0');
+
+    // Load hình ảnh
     questionImage.src = `./images/C${padded}.png`;
+
+    // Load video
+    videoSource.src = `./videos/C${padded}.mp4`;
+    questionVideo.load();
+    questionVideo.style.display = "block";
 
     db.ref("currentQuestion").set({ number: qn });
     answerListEl.innerHTML = "";
 
-    document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("active"));
-    btn.classList.add("active");
-
-    document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("selected"));
-    btn.classList.add("selected");
+    document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("active", "selected"));
+    btn.classList.add("active", "selected");
 
     startCountdown(30);
   }
@@ -212,10 +254,15 @@
     db.ref("answers").remove();
     db.ref("resetSignal").set(Date.now());
     questionImage.src = "";
+    videoSource.src = "";
+    questionVideo.style.display = "none";
     countdownEl.innerText = "⏱️ Còn lại: —";
     answerListEl.innerHTML = "";
     document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("active"));
     studentAnswers = {};
+    teamScores = { team1: 0, team2: 0 };
+    team1El.innerHTML = "Đội 1: Điểm 0";
+    team2El.innerHTML = "Đội 2: Điểm 0";
     alert("Đã reset toàn bộ hệ thống!");
   }
 
@@ -243,7 +290,6 @@
 
   function loadAnswers() {
     if (!currentQuestion) return;
-
     db.ref("answers").once("value", snap => {
       const data = snap.val();
       answerListEl.innerHTML = "";
@@ -253,7 +299,6 @@
           const answers = data[name];
           const ansKey = "cau" + currentQuestion;
           let studentAnswer = answers[ansKey] || "";
-
           studentAnswer = studentAnswer.toString().trim().toUpperCase();
           if (!["A", "B", "C", "D"].includes(studentAnswer)) {
             studentAnswer = "Không chọn";
@@ -261,6 +306,14 @@
 
           const correctAnswer = correctAnswers[ansKey];
           const score = (studentAnswer === correctAnswer) ? 3 : 0;
+
+          if (name.startsWith("Team1")) {
+            teamScores.team1 += score;
+            team1El.innerHTML = `Đội 1: Điểm ${teamScores.team1}`;
+          } else if (name.startsWith("Team2")) {
+            teamScores.team2 += score;
+            team2El.innerHTML = `Đội 2: Điểm ${teamScores.team2}`;
+          }
 
           const tr = document.createElement("tr");
           tr.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>${score}</td>`;
