--- a/teacher/index.html
+++ b/teacher/index.html
@@ -242,7 +242,7 @@ function startQuestion(qn, btn) {
   btn.classList.add("selected");
 
   if (qn === 10) {
-    showVideoThenImage('./videos/c10.mp4', imgPath);
+    showVideoThenImage('./videos/C10.mp4', imgPath);
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
