--- a/teacher/index.html
+++ b/teacher/index.html
@@ -148,12 +148,18 @@
 </div>
 
 <div id="mainArea">
+
+  <div id="totalScore" style="font-size: 24px; font-weight: bold; margin-bottom: 10px;">
+    🎯 Tổng điểm: 0
+  </div>
+
   <div id="controlPanel">
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
     <button onclick="openExplain(2)">📖 Giải thích 2</button>
     <button onclick="openExplain(3)">📖 Giải thích 3</button>
     <button onclick="openExplain(4)">📖 Giải thích 4</button>
   </div>
+
   <div id="currentQuestionInfo">
     <div id="countdown">⏱️ Còn lại: —</div>
     <img id="questionImage" src="" alt="Hình câu hỏi">
@@ -202,6 +208,7 @@ const countdownEl = document.getElementById("countdown");
 const answerListEl = document.getElementById("answerList");
 const team1El = document.getElementById("team1");
 const team2El = document.getElementById("team2");
+const totalScoreEl = document.getElementById("totalScore");
 
 let countdownInt = null;
 let currentQuestion = null;
@@ -228,7 +235,6 @@ function startQuestion(qn, btn) {
   const padded = String(qn).padStart(2, '0');
   const imgPath = `./images/C${padded}.png`;
 
-  // Xóa video cũ nếu có
   const oldVideo = document.querySelector("video");
   if (oldVideo) oldVideo.remove();
 
@@ -242,9 +248,9 @@ function startQuestion(qn, btn) {
   btn.classList.add("selected");
 
   if (qn === 10) {
-    showVideoThenImage('./videos/C10.mp4', imgPath); // câu 10: phải xem hết video rồi mới hiện ảnh
+    showVideoThenImage('./videos/C10.mp4', imgPath);
   } else if (qn === 1 || qn === 3) {
-    showVideoAndImageTogether(`./videos/C0${qn}.mp4`, imgPath); // câu 1 và 3: hiện video + ảnh cùng lúc
+    showVideoAndImageTogether(`./videos/C0${qn}.mp4`, imgPath);
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
@@ -273,13 +279,13 @@ function showVideoThenImage(videoSrc, imgSrc) {
   video.autoplay = true;
   video.className = "mediaDisplay";
 
-  questionImage.style.display = "none"; // Ẩn ảnh trước
+  questionImage.style.display = "none";
   questionImage.parentNode.insertBefore(video, questionImage);
 
   video.addEventListener("ended", () => {
     video.remove();
     questionImage.style.display = "block";
-    questionImage.src = imgSrc;
+    questionImage.src = imgPath;
     startCountdown(30);
   });
 }
@@ -297,6 +303,7 @@ function resetSystem() {
   teamScores = { team1: 0, team2: 0 };
   team1El.innerHTML = "Đội 1: Điểm 0";
   team2El.innerHTML = "Đội 2: Điểm 0";
+  totalScoreEl.innerHTML = "🎯 Tổng điểm: 0";
   alert("Đã reset toàn bộ hệ thống!");
 }
 
@@ -312,14 +319,6 @@ function startCountdown(sec) {
       loadAnswers();
     }
   }, 1000);
-}
-
-function saveAnswerForStudent(studentName, answer) {
-  if (!studentAnswers[studentName]) {
-    studentAnswers[studentName] = {};
-  }
-  studentAnswers[studentName]["cau" + currentQuestion] = answer;
-  db.ref("answers/" + studentName).set(studentAnswers[studentName]);
 }
 
 function loadAnswers() {
@@ -355,6 +354,8 @@ function loadAnswers() {
         tr.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>${score}</td>`;
         answerListEl.appendChild(tr);
       }
+      const total = teamScores.team1 + teamScores.team2;
+      totalScoreEl.innerHTML = `🎯 Tổng điểm: ${total}`;
     }
   });
 }
