--- a/teacher/index.html
+++ b/teacher/index.html
@@ -254,7 +254,8 @@ function startQuestion(qn, btn) {
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
-    startCountdown(30);
+    startCountdown(qn === 1 ? 90 : 30);
+
   }
 }
 
@@ -269,7 +270,8 @@ function showVideoAndImageTogether(videoSrc, imgSrc) {
   questionImage.src = imgSrc;
 
   questionImage.parentNode.insertBefore(video, questionImage);
-  startCountdown(30);
+startCountdown(qn === 1 ? 90 : 30);
+
 }
 
 function showVideoThenImage(videoSrc, imgSrc) {
@@ -329,6 +331,8 @@ function loadAnswers() {
     answerListEl.innerHTML = "";
 
     if (data) {
+      const studentScores = {}; // Tạo bảng điểm riêng
+
       for (const name in data) {
         const answers = data[name];
         const ansKey = "cau" + currentQuestion;
@@ -342,6 +346,11 @@ function loadAnswers() {
         const correctAnswer = correctAnswers[ansKey];
         const score = (studentAnswer === correctAnswer) ? 3 : 0;
 
+        // Cộng điểm riêng từng người
+        if (!studentScores[name]) studentScores[name] = 0;
+        studentScores[name] += score;
+
+        // Đồng thời cộng điểm team
         if (name.startsWith("Team1")) {
           teamScores.team1 += score;
           team1El.innerHTML = `Đội 1: Điểm ${teamScores.team1}`;
@@ -351,14 +360,16 @@ function loadAnswers() {
         }
 
         const tr = document.createElement("tr");
-        tr.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>${score}</td>`;
+        tr.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>${studentScores[name]}</td>`;
         answerListEl.appendChild(tr);
       }
+
       const total = teamScores.team1 + teamScores.team2;
       totalScoreEl.innerHTML = `🎯 Tổng điểm: ${total}`;
     }
   });
 }
+
 
 function openExplain(number) {
   const links = {
