--- a/teacher/index.html
+++ b/teacher/index.html
@@ -270,7 +270,7 @@ function showVideoAndImageTogether(videoSrc, imgSrc) {
   questionImage.src = imgSrc;
 
   questionImage.parentNode.insertBefore(video, questionImage);
-startCountdown(qn === 1 ? 90 : 30);
+startCountdown(30);
 
 }
 
