--- a/student/index.html
+++ b/student/index.html
@@ -99,7 +99,7 @@
           imageEl.src = `./images/C${padded}.png`;
           resetButtonSelection();
           enableButtons();
-          startCountdown(qn === 1 ? 90 : 30);
+          startCountdown(30);
 
         }
       }
