--- a/teacher/index.html
+++ b/teacher/index.html
@@ -254,7 +254,7 @@ function startQuestion(qn, btn) {
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
-    startCountdown(qn === 1 ? 90 : 30);
+    startCountdown(30);
 
   }
 }
