--- a/teacher/index.html
+++ b/teacher/index.html
@@ -139,6 +139,12 @@
       border-radius: 10px;
       margin-bottom: 20px;
     }
+    #totalScore {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: green;
+    }
   </style>
 </head>
 <body>
@@ -148,10 +154,7 @@
 </div>
 
 <div id="mainArea">
-
-  <div id="totalScore" style="font-size: 24px; font-weight: bold; margin-bottom: 10px;">
-    🎯 Tổng điểm: 0
-  </div>
+  <div id="totalScore">🎯 Tổng điểm: 0</div>
 
   <div id="controlPanel">
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
@@ -172,7 +175,7 @@
         <tr>
           <th>👤 Nhóm</th>
           <th>🅰️ Phương án</th>
-          <th>🏆 Điểm</th>
+          <th>🏆 Tổng điểm</th>
         </tr>
       </thead>
       <tbody id="answerList"></tbody>
@@ -254,8 +257,7 @@ function startQuestion(qn, btn) {
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
-    startCountdown(30);
-
+    startCountdown(qn === 1 ? 90 : 30);
   }
 }
 
@@ -270,8 +272,7 @@ function showVideoAndImageTogether(videoSrc, imgSrc) {
   questionImage.src = imgSrc;
 
   questionImage.parentNode.insertBefore(video, questionImage);
-startCountdown(30);
-
+  startCountdown(currentQuestion === 1 ? 90 : 30);
 }
 
 function showVideoThenImage(videoSrc, imgSrc) {
@@ -287,7 +288,7 @@ function showVideoThenImage(videoSrc, imgSrc) {
   video.addEventListener("ended", () => {
     video.remove();
     questionImage.style.display = "block";
-    questionImage.src = imgPath;
+    questionImage.src = imgSrc;
     startCountdown(30);
   });
 }
@@ -331,7 +332,7 @@ function loadAnswers() {
     answerListEl.innerHTML = "";
 
     if (data) {
-      const studentScores = {}; // Tạo bảng điểm riêng
+      const studentScores = {};
 
       for (const name in data) {
         const answers = data[name];
@@ -346,11 +347,9 @@ function loadAnswers() {
         const correctAnswer = correctAnswers[ansKey];
         const score = (studentAnswer === correctAnswer) ? 3 : 0;
 
-        // Cộng điểm riêng từng người
         if (!studentScores[name]) studentScores[name] = 0;
         studentScores[name] += score;
 
-        // Đồng thời cộng điểm team
         if (name.startsWith("Team1")) {
           teamScores.team1 += score;
           team1El.innerHTML = `Đội 1: Điểm ${teamScores.team1}`;
@@ -369,7 +368,6 @@ function loadAnswers() {
     }
   });
 }
-
 
 function openExplain(number) {
   const links = {
