--- a/student/index.html
+++ b/student/index.html
@@ -17,7 +17,6 @@
     #loginArea button { padding: 10px 20px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer; }
     #answeredQuestions { margin-top: 20px; text-align: left; display: inline-block; }
     #answeredQuestions li { font-size: 18px; margin-bottom: 5px; }
-    #totalScore { font-size: 22px; margin-top: 20px; color: blue; }
   </style>
 </head>
 <body>
@@ -43,8 +42,6 @@
 
   <h3>📋 Các câu đã trả lời:</h3>
   <ul id="answeredQuestions"></ul>
-
-  <div id="totalScore">🏆 Tổng điểm: 0</div>
 </div>
 
 <script>
@@ -65,7 +62,6 @@
   const buttons = document.querySelectorAll("#options button");
   const studentDisplay = document.getElementById("studentDisplay");
   const answeredQuestionsEl = document.getElementById("answeredQuestions");
-  const totalScoreEl = document.getElementById("totalScore");
 
   let currentQuestion = null;
   let countdownInt = null;
@@ -73,14 +69,13 @@
   let allAnswers = {};
   let selectedAnswers = {};
   let resetHandled = false;
-  let totalScore = 0;
 
   db.ref("resetSignal").on("value", snap => {
     if (snap.exists() && !resetHandled) {
       resetHandled = true;
       localStorage.removeItem("name");
       alert("Giáo viên đã reset. Vui lòng nhập tên lại!");
-      location.reload();
+      
     }
   });
 
@@ -101,14 +96,11 @@
         if (currentQuestion !== qn) {
           currentQuestion = qn;
           const padded = String(qn).padStart(2, '0');
-          imageEl.src = `./images/C${padded}.png`;
+          imageEl.src = ./images/C${padded}.png;
           resetButtonSelection();
           enableButtons();
-          if (qn === 1) {
-            startCountdown(90); // Câu 1: 90 giây
-          } else {
-            startCountdown(30); // Các câu khác: 30 giây
-          }
+          startCountdown(30);
+
         }
       }
     });
@@ -117,13 +109,13 @@
   function startCountdown(sec) {
     clearInterval(countdownInt);
     let t = sec;
-    countdownEl.innerText = `⏱️ ${t}s`;
+    countdownEl.innerText = ⏱️ ${t}s;
     answerAllowed = true;
     enableButtons();
 
     countdownInt = setInterval(() => {
       t--;
-      countdownEl.innerText = `⏱️ ${t}s`;
+      countdownEl.innerText = ⏱️ ${t}s;
       if (t <= 0) {
         clearInterval(countdownInt);
         countdownEl.innerText = "⏱️ 0s";
@@ -144,34 +136,29 @@
     const ans = selectedAnswers[key] || "Không chọn";
     allAnswers[key] = ans;
     const listItem = document.createElement("li");
-    listItem.textContent = `Câu ${currentQuestion}: ${ans}`;
+    listItem.textContent = Câu ${currentQuestion}: ${ans};
     answeredQuestionsEl.appendChild(listItem);
     db.ref("answers/" + name).set(allAnswers);
-
-    // Tính điểm đơn giản: nếu đã chọn (không phải "Không chọn") thì +1 điểm
-    if (ans !== "Không chọn") {
-      totalScore++;
-      totalScoreEl.innerText = `🏆 Tổng điểm: ${totalScore}`;
-    }
   }
 
-  buttons.forEach(b => {
-    b.onclick = () => {
-      if (!answerAllowed || !currentQuestion) return;
-      const ans = b.innerText;
-      const key = "cau" + currentQuestion;
-      selectedAnswers[key] = ans;
-      allAnswers[key] = ans;
-      resetButtonSelection();
-      b.classList.add("selected");
+ buttons.forEach(b => {
+  b.onclick = () => {
+    if (!answerAllowed || !currentQuestion) return;
+    const ans = b.innerText;
+    const key = "cau" + currentQuestion;
+    selectedAnswers[key] = ans;
+    allAnswers[key] = ans; // << thêm dòng này để đồng bộ luôn
+    resetButtonSelection();
+    b.classList.add("selected");
 
-      // Lưu ngay lên Firebase khi chọn
-      const name = localStorage.getItem("name");
-      if (name) {
-        db.ref("answers/" + name).set(allAnswers);
-      }
-    };
-  });
+    // Lưu ngay lên Firebase khi chọn
+    const name = localStorage.getItem("name");
+    if (name) {
+      db.ref("answers/" + name).set(allAnswers);
+    }
+  };
+});
+
 
   function resetButtonSelection() {
     buttons.forEach(b => b.classList.remove("selected"));
@@ -205,14 +192,10 @@
           if (currentQuestion !== qn) {
             currentQuestion = qn;
             const padded = String(qn).padStart(2, '0');
-            imageEl.src = `./images/C${padded}.png`;
+            imageEl.src = ./images/C${padded}.png;
             resetButtonSelection();
             enableButtons();
-            if (qn === 1) {
-              startCountdown(90);
-            } else {
-              startCountdown(30);
-            }
+            startCountdown(30);
           }
         }
       });
